test/trivial/deitz/vars-scopes/var_decl_strange2.good
var_decl_strange2.chpl:1: error: 'y' used before defined
var_decl_strange2.chpl:2: note: defined here
