test/trivial/deitz/vars-scopes/var_decl_strange2.chpl
var x = y;
var y = 3.0;

writeln(x);
writeln(y);
